<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dip540"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_bg_common_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dip32"
        android:text="@string/lib_title"
        android:textColor="@color/tv_black"
        android:textSize="@dimen/sip30" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dip20"
        android:textSize="@dimen/sip30"
        android:textColor="#888888"
        android:text="内容"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <com.jinzaofintech.commonlib.view.ClearableEditText
        android:id="@+id/cet_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dip40"
        android:layout_marginRight="@dimen/dip40"
        android:layout_marginTop="@dimen/dip48"
        android:background="@drawable/lib_shape_bg_white_stroke_gray_2dip"
        android:gravity="left"
        android:hint="@string/lib_please_input"
        android:padding="@dimen/dip20"
        android:textColor="@color/tv_heavy"
        android:textColorHint="@color/tv_hint"
        android:textSize="@dimen/sip28" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip1"
        android:layout_marginTop="@dimen/dip44"
        android:background="@color/colorddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip100"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lib_cancel"
            android:textColor="@color/tv_black"
            android:textSize="@dimen/sip36" />

        <View
            android:layout_width="@dimen/dip1"
            android:layout_height="match_parent"
            android:background="@color/colorddd" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lib_sure"
            android:textColor="@color/tv_black"
            android:textSize="@dimen/sip36" />

    </LinearLayout>

</LinearLayout>















