<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dip36"
        android:orientation="horizontal">

        <com.jinzaofintech.commonlib.view.TextViewIcon
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dip26"
            android:text="&#xe616;"
            android:textColor="@color/red"
            android:textSize="@dimen/sip30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dip8"
            android:text="@string/lib_special_attention"
            android:textColor="@color/tv_gray"
            android:textSize="@dimen/sip30" />
    </LinearLayout>

    <TextView
        android:id="@+id/tip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dip24"
        android:layout_marginRight="@dimen/dip24"
        android:layout_marginTop="@dimen/dip24"
        android:text="@string/lib_quota_msg1"
        android:textColor="@color/tv_gray"
        android:textSize="@dimen/sip28" />

    <TextView
        android:id="@+id/tip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dip24"
        android:layout_marginRight="@dimen/dip24"
        android:layout_marginTop="@dimen/dip8"
        android:text="@string/lib_quota_msg2"
        android:textColor="@color/tv_gray"
        android:textSize="@dimen/sip28" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip1"
        android:layout_marginTop="@dimen/dip32"
        android:background="@color/colorddd" />

</LinearLayout>